Bug 1589678 - CFR Pin tab message text gets cut off r=Mardak
Differential Revision: https://phabricator.services.mozilla.com/D49760

UltraBlame original commit: b5f7dccff453e27c686b89f4d94852d6ec37d1fa

--- a/browser/themes/shared/browser.inc.css
+++ b/browser/themes/shared/browser.inc.css
@@ -3115,17 +3115,23 @@ feature
 steps
 li
 {
-padding
+margin
 -
 inline
 -
 start
 :
-9px
+10px
 ;
 position
 :
 relative
+;
+display
+:
+list
+-
+item
 ;
 }
 #
@@ -3151,38 +3157,6 @@ margin
 bottom
 :
 5px
-;
-}
-#
-cfr
--
-notification
--
-feature
--
-steps
-li
-:
-before
-{
-content
-:
-"
-\
-2022
-"
-;
-position
-:
-absolute
-;
-inset
--
-inline
--
-start
-:
-0
 ;
 }
 #
